Prevent social icons overflowing line on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -406,13 +406,13 @@ article {
       margin-left: 0;
    }
    .social-icons img {
-      width: 40px;
+      width: 30px;
       margin-right: 0;
    }
 
    .codewars {
-      height: 38px;
-      width: 38px!important;
+      height: 29px;
+      width: 29px!important;
    }
    .profile-img {
       height: 100px;
